--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -4,14 +4,14 @@
             <nav class="footer__nav">
                 <p class="footer__nav-title">Навигация</p>
                 <ul class="footer__nav-list">
-                    <li><a class="footer__nav-link" href="/">Главная</a></li>
+                    <li><a class="footer__nav-link" href="./">Главная</a></li>
                     <li><a class="footer__nav-link" href="#!">Настройки</a></li>
                     <li><a class="footer__nav-link" href="#!">Создатели</a></li>
                     <li><a class="footer__nav-link" href="#!">Правила игры</a></li>
                 </ul>
             </nav>
             <div class="footer__logo-box">
-                <a href="/">
+                <a href="./">
                     <img class="footer__logo" src="./images/other/logo.png" alt="logo">
                 </a>
                 <p class="footer__logo-copy">&copy; 2024 PSoft. Все права защищены</p>
