--- a/src/components/header/nav.html
+++ b/src/components/header/nav.html
@@ -1,9 +1,9 @@
 <nav class="nav">
-    <a href="/">
+    <a href="./">
         <img class="nav__logo" src="./images/other/logo.png" alt="logo">
     </a>
     <ul class="nav__list">
-        <li><a href="/" class="nav__link">Главная</a></li>
+        <li><a href="./" class="nav__link">Главная</a></li>
         <li><a href="#!" class="nav__link">Настройки</a></li>
         <li><a href="#!" class="nav__link">Создатели</a></li>
         <li><a href="#!" class="nav__link">Правила игры</a></li>
