--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -5,7 +5,7 @@
                 <p class="footer__nav-title">Навигация</p>
                 <ul class="footer__nav-list">
                     <li><a class="footer__nav-link" href="./">Главная</a></li>
-                    <li><a class="footer__nav-link" href="#!">Настройки</a></li>
+                    <li><a class="footer__nav-link" href="./settings.html">Настройки</a></li>
                     <li><a class="footer__nav-link" href="#!">Создатели</a></li>
                     <li><a class="footer__nav-link" href="#!">Правила игры</a></li>
                 </ul>
