--- a/src/components/header/nav.html
+++ b/src/components/header/nav.html
@@ -4,7 +4,7 @@
     </a>
     <ul class="nav__list">
         <li><a href="./" class="nav__link">Главная</a></li>
-        <li><a href="#!" class="nav__link">Настройки</a></li>
+        <li><a href="./settings.html" class="nav__link">Настройки</a></li>
         <li><a href="#!" class="nav__link">Создатели</a></li>
         <li><a href="#!" class="nav__link">Правила игры</a></li>
     </ul>
