--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,9 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 button {
@@ -18,6 +21,10 @@ button {
     width: calc(1820 / 1920 * 100%);
     margin: 0 auto;
     max-width: 1820px;
+}
+
+main {
+    flex: 1 1;
 }
 
 
