--- a/src/components/setting/setting.html
+++ b/src/components/setting/setting.html
@@ -4,6 +4,7 @@
             <h1 class="setting__title">Настройки игры</h1>
             <div class="setting__block">
                 @@include("./tasks.html")
+                @@include("./kids.html")
             </div>
         </div>
     </div>
