--- a/src/components/setting/setting.html
+++ b/src/components/setting/setting.html
@@ -3,8 +3,8 @@
         <div class="setting__content">
             <h1 class="setting__title">Настройки игры</h1>
             <div class="settting__buttons">
-                <a href="./settings.html" class="promo__button promo__button--competition promo__button--setting">Соревноваться</a>
-                <a href="./settings.html" class="promo__button promo__button--team promo__button--setting">Командная игра</a>
+                <a href="./gameCompetitions.html" class="promo__button promo__button--competition promo__button--setting">Соревноваться</a>
+                <a href="./gameTeam.html" class="promo__button promo__button--team promo__button--setting">Командная игра</a>
             </div>
             <div class="setting__block">
                 @@include("./tasks.html")
