buggit statusgit status

--- a/src/scss/components/_competitions.scss
+++ b/src/scss/components/_competitions.scss
@@ -200,6 +200,8 @@
 }
 
 .modal__button {
+    display: block;
+    text-align: center;
     margin-top: 30px;
     width: 100%;
     padding: 15px 0;
