add all-button + adaptive game

--- a/src/components/game/gameCompetitions/game.html
+++ b/src/components/game/gameCompetitions/game.html
@@ -9,6 +9,7 @@
                 </div>
                 <button class="competitions__button-next">Следующее задание!</button>
             </div>
+            <button class="competitions__button-all">Выбрать всех!</button>
             <div class="competitions__kids">
 
             </div>
