--- a/src/scss/components/_competitions.scss
+++ b/src/scss/components/_competitions.scss
@@ -13,6 +13,7 @@
     color: $text;
     font-weight: 500;
     @include adaptive-font(32, 42);
+    text-align: center;
 }
 
 .competitions__example-box {
@@ -56,9 +57,11 @@
     transition: 0.3s;
     border: 3px solid $orange;
 
-    &:hover {
-        background-color: inherit;
-        color: $orange;
+    @media (hover: hover) {        
+        &:hover {
+            background-color: inherit;
+            color: $orange;
+        }
     }
 }
 
@@ -129,10 +132,13 @@
     color: $orange;
     margin-left: 50px;
 
-    &:hover {
-        background-color: $orange;
-        color: white;
+    @media (hover: hover) {        
+        &:hover {
+            background-color: $orange;
+            color: white;
+        }
     }
+
 }
 
 .kid-game__button--active {
@@ -169,7 +175,24 @@
     border-radius: 20px;
     padding: 50px;
     overflow-y: auto;
-    max-height: 100vh;
+    max-height: calc(100vh - 100px);
+
+    &::-webkit-scrollbar {
+        width: 9px;
+        background-color: transparent;
+        border-radius: 8px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: rgb(255, 255, 255);
+        border-radius: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: $orange;
+        border-radius: 8px;
+    }
+
 }
 
 .modal__title-box {
@@ -215,9 +238,11 @@
     background-color: inherit;
     color: $orange;
 
-    &:hover {
-        background-color: $orange;
-        color: white;
+    @media (hover: hover) {        
+        &:hover {
+            background-color: $orange;
+            color: white;
+        }
     }
 }
 
@@ -238,4 +263,100 @@
     text-align: center;
     color: $text;
     font-weight: 600;
+}
+
+.competitions__button-all {
+    display: block;
+    text-align: center;
+    margin-top: 30px;
+    align-self: flex-start;
+    padding: 15px 40px;
+    border-radius: 8px;
+    letter-spacing: 1px;
+    font-weight: 600;
+    @include adaptive-font(19, 21);
+    cursor: pointer;
+    transition: 0.3s;
+    border: 3px solid $orange;
+    background-color: inherit;
+    color: $orange;
+
+    @media (hover: hover) {        
+        &:hover {
+            background-color: $orange;
+            color: white;
+        }
+    }
+}
+
+.competitions__button-all--active {
+    background-color: $orange;
+    color: white;
+}
+
+@media screen and (max-width: 1031px) {
+    .kid-game {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .kid-game__name {
+        flex: 0 1 auto;
+        margin-bottom: 10px;
+    }
+
+    .kid-game__button {
+        margin: 0;
+        flex: 0 1 auto;
+        width: 50%;
+        margin-top: 15px;
+    }
+
+    .kid-game__line {
+        flex: 0 1 auto;
+        width: 100%;
+    }
+    
+    .competitions__button-all {
+        align-self: center;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .modal__content {
+        width: 90%;
+        padding-inline: 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .competitions__example-box {
+        margin-top: 15px;
+    }
+
+    .competitions__example-box {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .competitions__button-next {
+        flex: 0 1 auto;
+        width: 100%;
+    }
+
+    .competitions__example {
+        max-width: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .competitions__button-all {
+        width: 100%;
+    }
+
+    .kid-game__button {
+        width: 90%;
+    }
+
+
 }
