--- a/src/scss/components/_promo.scss
+++ b/src/scss/components/_promo.scss
@@ -79,8 +79,10 @@
     justify-content: center;
     text-align: center;
 
-    &:hover {
-        opacity: 0.8;
+    @media (hover: hover) {        
+        &:hover {
+            opacity: 0.8;
+        }
     }
 }
 
