--- a/src/components/game/gameTeam/game.html
+++ b/src/components/game/gameTeam/game.html
@@ -1,5 +1,5 @@
 <section class="competitions">
-    @@include("../modal.html")
+    @@include("./modalTeam.html")
     <div class="wrapper">
         <div class="competitions__content">
             <h2 class="competitions__title">Соревнуемся против друг друга!</h2>
