--- a/src/scss/components/_setting.scss
+++ b/src/scss/components/_setting.scss
@@ -15,6 +15,7 @@
     @include adaptive-font(30, 45);
     font-weight: 600;
     letter-spacing: 1px;
+    text-align: center;
 }
 
 .setting__block {
@@ -32,7 +33,6 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.181);
     border-radius: 20px;
     flex: 0 1 50%;
-    min-height: 500px;
 }
 
 .tasks__title-box {
@@ -316,6 +316,7 @@
     gap: 10px;
     align-self: flex-start;
     width: 100%;
+    justify-content: center;
 }
 
 @media screen and (max-width: 1295px) {
