--- a/src/components/game/gameCompetitions/game.html
+++ b/src/components/game/gameCompetitions/game.html
@@ -4,10 +4,11 @@
         <div class="competitions__content">
             <h2 class="competitions__title">Соревнуемся против друг друга!</h2>
             <div class="competitions__example-box">
+                <button class="competitions__button button-prev"></button>
                 <div class="competitions__example">
                     <p class="competitions__value"></p> 
                 </div>
-                <button class="competitions__button-next">Следующее задание!</button>
+                <button class="competitions__button competitions__button-next"></button>
             </div>
             <button class="competitions__button-all">Выбрать всех!</button>
             <div class="competitions__kids">
