--- a/src/components/header/nav.html
+++ b/src/components/header/nav.html
@@ -4,7 +4,11 @@
     </a>
     <ul class="nav__list">
         <li><a href="./" class="nav__link">Главная</a></li>
-        <li><a href="./settings.html" class="nav__link">Настройки</a></li>
+        <li class="nav__elem-drop">
+            <p class="nav__link">Настройки</p>
+            <button class="nav__drop-button"></button>
+            @@include("./drop.html")
+        </li>
         <li><a href="#!" class="nav__link">Создатели</a></li>
         <li><a href="#!" class="nav__link">Правила игры</a></li>
     </ul>
