--- a/src/components/setting/setting.html
+++ b/src/components/setting/setting.html
@@ -1,7 +1,7 @@
 <section class="setting">
     <div class="wrapper">
         <div class="setting__content">
-            <h1 class="setting__title">Настройки игры</h1>
+            <h1 class="setting__title">Настройки соревновательной игры</h1>
             <div class="settting__buttons">
                 <a href="./gameCompetitions.html" class="promo__button promo__button--competition promo__button--setting">Соревноваться</a>
             </div>
