--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -7,8 +7,8 @@
                     <li><a class="footer__nav-link" href="./">Главная</a></li>
                     <li><a class="footer__nav-link" href="./settings.html">Настройки соревнований</a></li>
                     <li><a class="footer__nav-link" href="./settingsTeam.html">Настройки командной игры</a></li>
-                    <li><a class="footer__nav-link" href="#!">Создатели</a></li>
-                    <li><a class="footer__nav-link" href="#!">Правила игры</a></li>
+                    <li><a class="footer__nav-link" href="./creators.html">Создатели</a></li>
+                    <li><a class="footer__nav-link" href="./rules.html">Правила игры</a></li>
                 </ul>
             </nav>
             <div class="footer__logo-box">
@@ -20,10 +20,10 @@
             <div class="footer__contacts">
                 <p class="footer__nav-title">Контактная информация</p>
                 <div class="footer__contacts-icons">
-                    <a href="#!">
+                    <a target="_blank" href="https://t.me/Fist_a">
                         <img class="footer__contacts-icon" src="./images/svg/telegram.svg" alt="telegram">
                     </a>
-                    <a href="#!">
+                    <a target="_blank" href="https://www.instagram.com/p._.a._.s._.h._.k._.a/">
                         <img class="footer__contacts-icon" src="./images/svg/instagram.svg" alt="instagram">
                     </a>
                 </div>
