--- a/src/components/header/header.html
+++ b/src/components/header/header.html
@@ -4,10 +4,10 @@
             @@include("./nav.html")
             <div class="header__contacts">
                 <p class="header__contacts-paragraph">Социальные сети</p>
-                <a href="#!">
+                <a target="_blank" href="https://t.me/Fist_a">
                     <img class="header__contacts-icon" src="./images/svg/telegram.svg" alt="telegram">
                 </a>
-                <a href="#!">
+                <a target="_blank" href="https://www.instagram.com/p._.a._.s._.h._.k._.a/">
                     <img class="header__contacts-icon" src="./images/svg/instagram.svg" alt="instagram">
                 </a>
             </div>
