--- a/src/components/header/nav.html
+++ b/src/components/header/nav.html
@@ -9,7 +9,7 @@
             <button class="nav__drop-button"></button>
             @@include("./drop.html")
         </li>
-        <li><a href="#!" class="nav__link">Создатели</a></li>
-        <li><a href="#!" class="nav__link">Правила игры</a></li>
+        <li><a href="./creators.html" class="nav__link">Создатели</a></li>
+        <li><a href="./rules.html" class="nav__link">Правила игры</a></li>
     </ul>
 </nav>
